kubernetes/ingress-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production-snowstorm
spec:
  # Set this to the ingress controller you have installed, e.g. nginx, traefik or haproxy.
  # ingressClassName: nginx
  rules:
  - host: snowstorm.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snowstorm-front
            port:
              number: 8080
  tls:
  - hosts:
    - snowstorm.example.com
    secretName: snowstorm.example.com
